// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Browser 1`] = `
<div
  className="sc-AxjAm fsNCWl"
/>
`;

exports[`Render Browser with props 1`] = `
<div
  className="sc-AxjAm fafZzK"
/>
`;

exports[`Render MacTerminal 1`] = `
<section
  className="sc-AxiKw pRwAg"
/>
`;

exports[`Render MacTerminal with props 1`] = `
<section
  className="sc-AxiKw gtWMlr"
/>
`;

exports[`Render Terminal 1`] = `
<section
  className="sc-AxirZ bKMzNX"
/>
`;

exports[`Render Terminal with props 1`] = `
<section
  className="sc-AxirZ hoLNTA"
/>
`;
